tests/baselines/reference/parserCatchClauseWithTypeAnnotation1.errors.txt
tests/cases/conformance/parser/ecmascript5/CatchClauses/parserCatchClauseWithTypeAnnotation1.ts(2,11): error TS1013: Catch clause parameter cannot have a type annotation.


==== tests/cases/conformance/parser/ecmascript5/CatchClauses/parserCatchClauseWithTypeAnnotation1.ts (1 errors) ====
    try {
    } catch (e: Error) {
              ~
!!! error TS1013: Catch clause parameter cannot have a type annotation.
    }
    